--- a/.github/workflows/deployment2.yml
+++ b/.github/workflows/deployment2.yml
@@ -1,7 +1,7 @@
 name: Deployment
 on: push
 jobs:
-  deploy:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -10,9 +10,30 @@ jobs:
         run: npm ci
       - name: Lint code
         run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: action/checkout@v3
+      - name: Install Dependencies
+        run: npm ci
       - name: Test code
-        run: npm test
+        run: npm run test
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: action/checkout@v3
+      - name: Install Dependencies
+        run: npm ci
       - name: Build code
         run: npm run build
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: action/checkout@v3
+      - name: Install Dependencies
+        run: npm ci
       - name: Deploy
         run: echo "Deployment ..."
